# rustaceology-logbook

./: .gitignore  LICENSE  README.md  cspell.json  rustDictionary.txt  rustaceology-logbook.code-workspace
bibliography/: list_of_sources.bib
exercises/_exercism/: .gitignore
exercises/a10_basic_stat_for_integers/: Cargo.toml
exercises/a13_naive_pseudorandom_generator/: Cargo.toml
exercises/a14_panisogram/: Cargo.toml
exercises/a15_dec2hexoct/: Cargo.toml
exercises/a16_the_stair/: Cargo.toml
exercises/a17_retomando_rust/: Cargo.toml
exercises/a20_expresion_matematica/: Cargo.toml
exercises/a21_editor_txt/: Cargo.toml  ejemplo1.txt  text.txt
exercises/a22_colores/: Cargo.toml
exercises/a23_combinacion_sumas/: Cargo.toml
exercises/a24_triples_pitagoricos/: Cargo.toml
exercises/a25_tablas_multiplicar/: Cargo.toml
exercises/a26_punto_encuentro/: Cargo.toml
exercises/a27_simulador_clima/: Cargo.toml
exercises/a28_adivinanzas_matematicas/: Cargo.toml
exercises/a29_crud_sorteo/: Cargo.toml
exercises/a30_carrera_coches/: Cargo.toml
exercises/a3_the_twelve_days_of_christmas/: lyrics.txt
exercises/a4_reverse_string_from_scratch/: Cargo.toml
exercises/a5_count_repetition_from_scratch/: Cargo.toml
exercises/a6_hamming_distance/: Cargo.toml
exercises/a8_count_digits_on_string/: Cargo.toml
exercises/a9_lizard_spock/: Cargo.toml
exercises/m1_make_markdown/: Cargo.toml
exercises/w1_hello-wasm/: Cargo.toml  README.md
exercises/w2_rust-wasm-app/: package-lock.json  package.json  webpack.config.js
exercises/w2_rust-wasm-app/rust_wasm_dev/: Cargo.toml  LICENSE-MIT
exercises/w2_rust-wasm-app/rust_wasm_dev/src/: utils.rs
exercises/w2_rust-wasm-app/rust_wasm_dev/tests/: web.rs
exercises/w3_rust-wasm-react-app/: package-lock.json  package.json  webpack.config.js
exercises/w3_rust-wasm-react-app/rust_wasm_dev/: Cargo.toml
exercises/w3_rust-wasm-react-app/rust_wasm_dev/src/: lib.rs
notes/: notes_extract.md
notes/3-5_controlflow_if/: Cargo.toml
notes/3-5_controlflow_loops/: Cargo.toml
notes/4-3_slice_reference/: Cargo.toml
notes/5_custom_data_type_Structure/: Cargo.toml
notes/6-1_custom_data_type_enumeration/: Cargo.toml
references/: rust_by_example.bib  the_rust_programming_language.bib  the_rust_standard_library_1_60_0.bib
(+177 files in other folders)
