[package]
name = "rust-wasm-app-template"
# name = "{{project-name}}"
version = "0.1.0"
authors = ["Hans Escobar <escobar.hans@gmail.com>"]
# authors = ["{{authors}}"]
description = "Trying to setup a wasm app"
edition = "2021"
license = "MIT/Apache-2.0"

# cdylib for *.wasm
# rlib is necesary to perform unit tests with wasm-pack test
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# fundamental for wasm
wasm-bindgen = "0.2.83"
# for logging panic messages to the developer console. 
console_error_panic_hook = { version = "0.1.7", optional = true }
# Bindings to JavaScript’s standard, built-in objects, including their methods and properties.
js-sys = "0.3.60"


[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
